--- a/src/main/resources/templates/dashboard.twig
+++ b/src/main/resources/templates/dashboard.twig
@@ -1,76 +1,64 @@
 {% extends "base.twig" %}
 
 {% block body %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Another HR Portal</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="freeTime" role="button" data-toggle="dropdown" aria-expanded="false">
-                            Concediu
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="freeTime">
-                            <li><a class="dropdown-item" href="#">Adauga concediu</a></li>
-                            <li><a class="dropdown-item" href="#">Concediile mele</a></li>
-                            <li><a class="dropdown-item" href="#">Where is everyone? &trade;</a></li>
-                            <li><a class="dropdown-item" href="#">Aprobari concedii</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="recruitment" role="button" data-toggle="dropdown" aria-expanded="false">
-                            Recrutare
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="recruitment">
-                            <li><a class="dropdown-item" href="#">Company skills</a></li>
-                            <li><a class="dropdown-item" href="#">Candidati</a></li>
-                            <li><a class="dropdown-item" href="#">Joburi</a></li>
-                            <li><a class="dropdown-item" href="#">Website recrutare</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="performanceManagement" role="button" data-toggle="dropdown" aria-expanded="false">
-                            Performance Management
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="performanceManagement">
-                            <li><a class="dropdown-item" href="#">My OKRs</a></li>
-                            <li><a class="dropdown-item" href="#">My Skills</a></li>
-                            <li><a class="dropdown-item" href="#">My 365 evaluation</a></li>
-                            <li><a class="dropdown-item" href="#">Team OKRs</a></li>
-                            <li><a class="dropdown-item" href="#">Team Skills</a></li>
-                            <li><a class="dropdown-item" href="#">Team 365</a></li>
-                            <li><a class="dropdown-item" href="#">Performance analytics</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ECHIPA</a>
-                    </li>
-                </ul>
-                <ul class="ml-auto navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="notificationDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bell-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
-                            </svg>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="notificationDropdown">
-                            <li class="text-center small">Fara notificari</li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                            {{ user.fullName }}
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="#">Profilul meu</a></li>
-                            <li><a class="dropdown-item" href="/logout">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+
+                        <p class="card-text">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+
+                <div class="card card-primary card-outline">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+
+                        <p class="card-text">
+                            Some quick example text to build on the card title and make up the bulk of the card's
+                            content.
+                        </p>
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div><!-- /.card -->
             </div>
+            <!-- /.col-md-6 -->
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="m-0">Featured</h5>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title">Special title treatment</h6>
+
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+                <div class="card card-primary card-outline">
+                    <div class="card-header">
+                        <h5 class="m-0">Featured</h5>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title">Special title treatment</h6>
+
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <!-- /.col-md-6 -->
         </div>
-    </nav>
+        <!-- /.row -->
+    </div><!-- /.container-fluid -->
 {% endblock %}
