add webpages in menu

--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -181,6 +181,18 @@
                     data-accordion="false">
                     <!-- Add icons to the links using the .nav-icon class
                          with font-awesome or any other icon font library -->
+                    {% for webpage in user.webpages %}
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-glass-cheers"></i>
+                                <p>
+                                    {{ webpage.displayedName }}
+                                    <span class="right badge badge-danger">New</span>
+                                </p>
+                            </a>
+                        </li>
+                    {% endfor %}
+
                     <li class="nav-item has-treeview menu-open">
                         <a href="#" class="nav-link active">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
