bound user info to the menu bar

--- a/src/main/resources/templates/login.twig
+++ b/src/main/resources/templates/login.twig
@@ -11,8 +11,6 @@
     <link rel="stylesheet" type="text/css" href="/webjars/AdminLTE/3.0.5/dist/css/adminlte.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <!-- Ionicons -->
-    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <!-- icheck bootstrap -->
     <link rel="stylesheet" type="text/css"
           href="/webjars/AdminLTE/3.0.5/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
@@ -62,12 +60,10 @@
                     <!-- /.col -->
                 </div>
             </form>
+            <hr>
 
-            <p class="mb-1">
-                <a href="forgot-password.html">I forgot my password</a>
-            </p>
-            <p class="mb-0">
-                <a class="text-center" href="register.html">Register a new membership</a>
+            <p class="mb-1 text-center w-100 small">
+                <a href="#">I forgot my password</a>
             </p>
         </div>
         <!-- /.login-card-body -->
