--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -279,7 +279,7 @@
             Anything you want
         </div>
         <!-- Default to the left -->
-        <strong>Copyright &copy; 2014-2019 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; {{ "now"|date("Y") }} AppBranch.</strong> All rights reserved.
     </footer>
 </div>
 
