--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -181,9 +181,9 @@
                     data-accordion="false">
                     <!-- Add icons to the links using the .nav-icon class
                          with font-awesome or any other icon font library -->
-                    {% for webpage in user.webpages %}
+                    {% for webpage in webpages %}
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link {% if currentUri == webpage.link %}active{% endif %}">
                                 <i class="fas fa-glass-cheers"></i>
                                 <p>
                                     {{ webpage.displayedName }}
@@ -194,7 +194,7 @@
                     {% endfor %}
 
                     <li class="nav-item has-treeview menu-open">
-                        <a href="#" class="nav-link active">
+                        <a href="#" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 Starter Pages
@@ -203,7 +203,7 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">
+                                <a href="#" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Active Page</p>
                                 </a>
