--- a/src/main/resources/templates/login.twig
+++ b/src/main/resources/templates/login.twig
@@ -29,7 +29,7 @@
                 {% csrf %}
 
                 <div class="input-group mb-3">
-                    <input class="form-control" placeholder="Email" type="text" name="username" id="username">
+                    <input class="form-control" placeholder="Email" type="email" name="username" id="username">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-envelope"></span>
@@ -71,9 +71,9 @@
 </div>
 <!-- /.login-box -->
 
-<script src="webjars/AdminLTE/3.0.5/plugins/jquery/jquery.min.js"></script>
-<script src="webjars/AdminLTE/3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="webjars/AdminLTE/3.0.5/dist/js/adminlte.min.js"></script>
+<script src="/webjars/AdminLTE/3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/webjars/AdminLTE/3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/webjars/AdminLTE/3.0.5/dist/js/adminlte.min.js"></script>
 
 </body>
 </html>
