--- a/src/main/resources/templates/user/userList.twig
+++ b/src/main/resources/templates/user/userList.twig
@@ -6,6 +6,13 @@
     <link href="/webjars/AdminLTE/3.0.5/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet">
     <link href="/webjars/AdminLTE/3.0.5/plugins/datatables-responsive/css/responsive.bootstrap4.min.css"
           rel="stylesheet">
+    <style>
+        #usersList tbody {
+            cursor: pointer;
+            user-select: none;
+            -webkit-user-select: none;
+        }
+    </style>
 {% endblock %}
 
 {% block javascripts %}
@@ -16,11 +23,17 @@
 
     <script>
         $(document).ready(function () {
-            $('#usersList').DataTable({
+            let table = $('#usersList').DataTable({
                 "responsive": true,
                 "language": {
                     url: "/assets/datatables_translation/Romanian.json"
                 }
+            });
+
+            $('#usersList tbody').on('dblclick', 'tr', function () {
+                var data = table.row(this).data();
+
+                window.location.href = "/user/info/" + parseInt(data[0]);
             });
         });
     </script>
@@ -35,6 +48,9 @@
                         <table class="table table-hover table-bordered" id="usersList">
                             <thead>
                             <tr>
+                                <th>
+                                    ID
+                                </th>
                                 <th>
                                     Nume complet
                                 </th>
@@ -55,6 +71,9 @@
                             <tbody>
                             {% for activeUser in allUsers %}
                                 <tr>
+                                    <td class="text-center">
+                                        {{ activeUser.id }}
+                                    </td>
                                     <td>
                                         {{ activeUser.fullName }}
                                     </td>
