--- a/src/main/resources/templates/user/addUser.twig
+++ b/src/main/resources/templates/user/addUser.twig
@@ -85,7 +85,7 @@
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" id="email" required>
                                 <div class="input-group-append">
-                                    <span class="input-group-text">@{{ user.company.emailDomain }}</span>
+                                    <span class="input-group-text">@{{ loggedUser.company.emailDomain }}</span>
                                 </div>
                             </div>
                         </div>
